1- superscript fix on mobile for header and footer 2- removing white background from footnote partial

--- a/app/css/components/_footnote.scss
+++ b/app/css/components/_footnote.scss
@@ -54,7 +54,7 @@
 
   &:hover{
       background: url("../img/desktop/ctas/footnote-btn-hover.png") no-repeat;
-      background-color: $color-white;
+      //background-color: $color-white;
   }
 }
 
